--- a/work/CNMS/Wild018-adaptive w quantize.ipynb
+++ b/work/CNMS/Wild018-adaptive w quantize.ipynb
@@ -225,16 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1c29dbdc50>"
+       "<matplotlib.image.AxesImage at 0x1c2dffad68>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -250,8 +250,11 @@
     }
    ],
    "source": [
-    "newimg[np.where(newimg == [127])] = [255]\n",
-    "newimg[np.where(newimg == [85])] = [0]\n",
+    "maximum= np.amax(newimg)\n",
+    "minimum=np.amin(newimg)\n",
+    "\n",
+    "newimg[np.where(newimg == [maximum])] = [255]\n",
+    "newimg[np.where(newimg == [minimum])] = [0]\n",
     "plt.imshow(newimg, cmap='gray')"
    ]
   },
