--- a/work/CNMS/Wild052-adaptive w quantize.ipynb
+++ b/work/CNMS/Wild052-adaptive w quantize.ipynb
@@ -224,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1c2b512550>"
+       "<matplotlib.image.AxesImage at 0x1c27d7c470>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -249,8 +249,11 @@
     }
    ],
    "source": [
-    "newimg[np.where(newimg == [123])] = [255]\n",
-    "newimg[np.where(newimg == [31])] = [0]\n",
+    "maximum= np.amax(newimg)\n",
+    "minimum=np.amin(newimg)\n",
+    "\n",
+    "newimg[np.where(newimg == [maximum])] = [255]\n",
+    "newimg[np.where(newimg == [minimum])] = [0]\n",
     "plt.imshow(newimg, cmap='gray')"
    ]
   },
@@ -368,7 +371,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10701.292670203642\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(271.37330873308736, 360.750307503075)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import skimage.measure\n",
+    "print(skimage.measure.perimeter(cleanskel))\n",
+    "props=skimage.measure.regionprops(img)\n",
+    "props[0].centroid\n",
+    "#works if you use img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
