--- a/work/CNMS/Wild016-adaptive w quantize.ipynb
+++ b/work/CNMS/Wild016-adaptive w quantize.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -95,10 +95,10 @@
     {
      "data": {
       "text/plain": [
-       "116.31244048022572"
+       "(693, 894)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,8 +111,16 @@
     "plt.hist(img.ravel(),256,[0,256])\n",
     "plt.show()\n",
     "\n",
-    "np.mean(img)\n"
+    "np.mean(img)\n",
+    "np.shape(img)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
