--- a/work/CNMS/Wild018-adaptive w quantize.ipynb
+++ b/work/CNMS/Wild018-adaptive w quantize.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,16 +271,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1c295acb70>"
+       "<matplotlib.image.AxesImage at 0x1c2c980a90>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
