--- a/work/CNMS/Clean histogram equalization.ipynb
+++ b/work/CNMS/Clean histogram equalization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -33,6 +33,7 @@
     "\n",
     "#cropping the image\n",
     "from PIL import Image\n",
+    "import cv2\n",
     "im = Image.open('Wild052.tif');\n",
     "width, height=im.size\n",
     "area = (0, 0, width, height-77 )\n",
@@ -41,11 +42,11 @@
     "img = cv2.imread('cropped_Wild052.tif',0)\n",
     "\n",
     "#plotting the equalized histogram\n",
-    "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "equ = cv2.equalizeHist(img)\n",
     "plt.hist(equ.ravel(),256,[0,256])\n",
-    "plt.show()"
+    "plt.show()\n",
+    "#if you don't say plt.show() then it prints the array"
    ]
   },
   {
