--- a/work/CNMS/attempting to convert raster to vector.ipynb
+++ b/work/CNMS/attempting to convert raster to vector.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -33,6 +33,7 @@
     "\n",
     "#cropping the image\n",
     "from PIL import Image\n",
+    "import cv2\n",
     "im = Image.open('Wild052.tif');\n",
     "width, height=im.size\n",
     "area = (0, 0, width, height-77 )\n",
@@ -41,7 +42,7 @@
     "img = cv2.imread('cropped_Wild052.tif',0)\n",
     "\n",
     "#plotting the equalized histogram\n",
-    "import cv2\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "equ = cv2.equalizeHist(img)\n",
     "plt.hist(equ.ravel(),256,[0,256])\n",
@@ -50,21 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[False False False ... False False False]\n",
-      " [False False False ... False False False]\n",
-      " [False False False ... False False False]\n",
-      " ...\n",
-      " [False  True False ... False False False]\n",
-      " [False False  True ... False False False]\n",
-      " [False False False ... False False False]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x1260853c8>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -94,16 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1c288d6198>"
+       "<matplotlib.image.AxesImage at 0x1260139b0>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -123,6 +121,112 @@
     "plt.imshow(img, cmap='gray', alpha= .9)\n",
     "plt.imshow(cleanskel, cmap=red, interpolation='sinc', alpha=0.3) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ogr'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-6c60dc87b58f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mogr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgdal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mosr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mitertools\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmath\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msqrt\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mceil\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ogr'"
+     ]
+    }
+   ],
+   "source": [
+    "import ogr, gdal, osr, os\n",
+    "import numpy as np\n",
+    "import itertools\n",
+    "from math import sqrt,ceil\n",
+    "\n",
+    "def pixelOffset2coord(rasterfn,xOffset,yOffset):\n",
+    "    raster = gdal.Open(rasterfn)\n",
+    "    geotransform = raster.GetGeoTransform()\n",
+    "    originX = geotransform[0]\n",
+    "    originY = geotransform[3]\n",
+    "    pixelWidth = geotransform[1]\n",
+    "    pixelHeight = geotransform[5]\n",
+    "    coordX = originX+pixelWidth*xOffset\n",
+    "    coordY = originY+pixelHeight*yOffset\n",
+    "    return coordX, coordY\n",
+    "\n",
+    "def raster2array(rasterfn):\n",
+    "    raster = gdal.Open(rasterfn)\n",
+    "    band = raster.GetRasterBand(1)\n",
+    "    array = band.ReadAsArray()\n",
+    "    return array\n",
+    "\n",
+    "def array2shp(array,outSHPfn,rasterfn,pixelValue):\n",
+    "\n",
+    "    # max distance between points\n",
+    "    raster = gdal.Open(rasterfn)\n",
+    "    geotransform = raster.GetGeoTransform()\n",
+    "    pixelWidth = geotransform[1]\n",
+    "    maxDistance = ceil(sqrt(2*pixelWidth*pixelWidth))\n",
+    "    print(maxDistance)\n",
+    "\n",
+    "    # array2dict\n",
+    "    count = 0\n",
+    "    roadList = np.where(array == pixelValue)\n",
+    "    multipoint = ogr.Geometry(ogr.wkbMultiLineString)\n",
+    "    pointDict = {}\n",
+    "    for indexY in roadList[0]:\n",
+    "        indexX = roadList[1][count]\n",
+    "        Xcoord, Ycoord = pixelOffset2coord(rasterfn,indexX,indexY)\n",
+    "        pointDict[count] = (Xcoord, Ycoord)\n",
+    "        count += 1\n",
+    "\n",
+    "    # dict2wkbMultiLineString\n",
+    "    multiline = ogr.Geometry(ogr.wkbMultiLineString)\n",
+    "    for i in itertools.combinations(pointDict.values(), 2):\n",
+    "        point1 = ogr.Geometry(ogr.wkbPoint)\n",
+    "        point1.AddPoint(i[0][0],i[0][1])\n",
+    "        point2 = ogr.Geometry(ogr.wkbPoint)\n",
+    "        point2.AddPoint(i[1][0],i[1][1])\n",
+    "\n",
+    "        distance = point1.Distance(point2)\n",
+    "\n",
+    "        if distance < maxDistance:\n",
+    "            line = ogr.Geometry(ogr.wkbLineString)\n",
+    "            line.AddPoint(i[0][0],i[0][1])\n",
+    "            line.AddPoint(i[1][0],i[1][1])\n",
+    "            multiline.AddGeometry(line)\n",
+    "\n",
+    "    # wkbMultiLineString2shp\n",
+    "    shpDriver = ogr.GetDriverByName(\"ESRI Shapefile\")\n",
+    "    if os.path.exists(outSHPfn):\n",
+    "        shpDriver.DeleteDataSource(outSHPfn)\n",
+    "    outDataSource = shpDriver.CreateDataSource(outSHPfn)\n",
+    "    outLayer = outDataSource.CreateLayer(outSHPfn, geom_type=ogr.wkbMultiLineString )\n",
+    "    featureDefn = outLayer.GetLayerDefn()\n",
+    "    outFeature = ogr.Feature(featureDefn)\n",
+    "    outFeature.SetGeometry(multiline)\n",
+    "    outLayer.CreateFeature(outFeature)\n",
+    "\n",
+    "\n",
+    "def main(rasterfn,outSHPfn,pixelValue):\n",
+    "    array = raster2array(rasterfn)\n",
+    "    array2shp(array,outSHPfn,rasterfn,pixelValue)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    rasterfn = 'test.tif'\n",
+    "    outSHPfn = 'test.shp'\n",
+    "    pixelValue = 0\n",
+    "    main(rasterfn,outSHPfn,pixelValue)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
