--- a/work/CNMS/assessing success with loop.ipynb
+++ b/work/CNMS/assessing success with loop.ipynb
@@ -2,63 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "path01.tif\n",
-      "path02.tif\n",
-      "path03.tif\n",
-      "path04.tif\n",
-      "path05.tif\n",
-      "path06.tif\n",
-      "path07.tif\n",
-      "path08.tif\n",
-      "path09.tif\n",
-      "path10.tif\n",
-      "path11.tif\n",
-      "path12.tif\n",
-      "path13.tif\n",
-      "path14.tif\n",
-      "path15.tif\n",
-      "path16.tif\n",
-      "path17.tif\n",
-      "path18.tif\n",
-      "path19.tif\n",
-      "path20.tif\n",
-      "path21.tif\n",
-      "path22.tif\n",
-      "path23.tif\n",
-      "path24.tif\n",
-      "path25.tif\n",
-      "[[72042.  3240.]\n",
-      " [71327.  5321.]\n",
-      " [39228.  7206.]\n",
-      " [24569.  8300.]\n",
-      " [15717.  9025.]\n",
-      " [13777.  9557.]\n",
-      " [11974.  9890.]\n",
-      " [11491. 10196.]\n",
-      " [11463. 10277.]\n",
-      " [11022. 10380.]\n",
-      " [11045. 10362.]\n",
-      " [10960. 10456.]\n",
-      " [10923. 10477.]\n",
-      " [10935. 10526.]\n",
-      " [10914. 10519.]\n",
-      " [10840. 10581.]\n",
-      " [10896. 10577.]\n",
-      " [10852. 10592.]\n",
-      " [10818. 10589.]\n",
-      " [10815. 10579.]\n",
-      " [10818. 10614.]\n",
-      " [10810. 10675.]\n",
-      " [10803. 10614.]\n",
-      " [10804. 10598.]\n",
-      " [10780. 10677.]]\n"
+      "[[72042.   853.]\n",
+      " [71327.  1533.]\n",
+      " [39228.  2260.]\n",
+      " [24569.  2714.]\n",
+      " [15717.  3300.]\n",
+      " [13777.  3876.]\n",
+      " [11974.  4402.]\n",
+      " [11491.  4573.]\n",
+      " [11463.  5133.]\n",
+      " [11022.  5407.]\n",
+      " [11045.  5665.]\n",
+      " [10960.  6004.]\n",
+      " [10923.  6347.]\n",
+      " [10935.  6515.]\n",
+      " [10914.  6698.]\n",
+      " [10840.  6624.]\n",
+      " [10896.  6701.]\n",
+      " [10852.  7138.]\n",
+      " [10818.  6991.]\n",
+      " [10815.  7032.]\n",
+      " [10818.  7098.]\n",
+      " [10810.  7164.]\n",
+      " [10803.  7222.]\n",
+      " [10804.  7196.]\n",
+      " [10780.  7280.]]\n"
      ]
     }
    ],
@@ -143,7 +118,7 @@
     "    #plt.imshow(neighbors, interpolation='sinc')\n",
     "    \n",
     "    #reading in the dilated correct skeleton to assess su\n",
-    "    correctskeleton=cv2.imread(\"dilation3.tif\", 0)\n",
+    "    correctskeleton=cv2.imread(\"dilation1.tif\", 0)\n",
     "\n",
     "    # total length of skeleton\n",
     "    #print(\"total length:\", np.sum(floatskel))\n",
@@ -160,11 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt('output.csv',output,delimiter=',')"
+    "np.savetxt('outputdil1.csv',output,delimiter=',')"
    ]
   },
   {
